Use PL_ENABLE_BITMASK_OPERATORS to enable bitwise operations for our scoped enum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,16 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+add_subdirectory(external/philslib)
+
 add_executable(basic_cmake_app include/main.hpp src/main.cpp)
 
 target_include_directories(
   basic_cmake_app
   PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+target_link_libraries(
+  basic_cmake_app
+  PRIVATE
+  CppPhil::philslib)
