--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_subdirectory(external/philslib)
+add_subdirectory(external/fmtlib)
 
 add_executable(basic_cmake_app include/main.hpp src/main.cpp)
 
@@ -18,4 +19,5 @@ target_include_directories(
 target_link_libraries(
   basic_cmake_app
   PRIVATE
-  CppPhil::philslib)
+  CppPhil::philslib
+  fmt::fmt)
